k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: qtec
  labels:
    app.kubernetes.io/name: qtec
    app.kubernetes.io/managed-by: kubectl
